# rl_viewplanning

./: .gitignore  README.md  requirements.txt
ipa_kifz_data/: CMakeLists.txt  README.md  package.xml
ipa_kifz_description/: CMakeLists.txt  package.xml
ipa_kifz_description/calibration/: calibration_ur10e.yaml
ipa_kifz_description/meshes/: endeffector_withcamera.STL
ipa_kifz_description/urdf/: demmeler_welding_table.urdf.xacro  ipa_kifz.urdf.xacro  ipa_kifz_ensenso.urdf.xacro  ipa_kifz_env.urdf.xacro  welding_gun_ensenso.urdf.xacro
ipa_kifz_gazebo/: CMakeLists.txt  package.xml
ipa_kifz_gazebo/models/: ensenso.gazebo
ipa_kifz_gazebo/worlds/: empty_ipa.world
ipa_kifz_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ipa_kifz_moveit_config/config/: fake_controllers.yaml  ipa_kifz.srdf  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  ur10e_joint_limits.yaml
ipa_kifz_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ipa_kifz_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ipa_kifz_viewplanning/: .gitignore  CMakeLists.txt  package.xml  setup.py
ipa_kifz_viewplanning/config/: ipa_kifz_viewplanning_dqn_params.yaml  ipa_kifz_viewposes_abc_mesh_1_scale_4.csv  ipa_kifz_viewposes_abc_mesh_8_scale_6.csv  ipa_kifz_viewposes_workpiece_1.csv
ipa_kifz_viewplanning/include/: point_cloud_handler.h
ipa_kifz_viewplanning/launch/: ipa_kifz_gazebo.launch  sensor.rviz  spawn_sensor.launch  spawn_workpiece.launch  start_training.launch
ipa_kifz_viewplanning/scripts/helper/: ipa_kifz_logging.py
ipa_kifz_viewplanning/scripts/qlearn/: qlearn.py  start_training_qlearn.py
ipa_kifz_viewplanning/scripts/stable_baselines/: start_training_sb.py
ipa_kifz_viewplanning/scripts/viewpoint_sampling/: viewpoint_sampler.py
ipa_kifz_viewplanning/src/: point_cloud_handler.cpp
ipa_kifz_viewplanning/srv/: GetAreaGain.srv
openai_ros/: CMakeLists.txt  README.md  package.xml
openai_ros/src/openai_ros/: controllers_connection.py  gazebo_connection.py  openai_ros_common.py  robot_gazebo_env.py
openai_ros/src/openai_ros/robot_envs/: ipa_kifz_env.py
openai_ros/src/openai_ros/task_envs/: ipa_kifz_viewplanning.py  task_commons.py  task_envs_list.py
openai_ros/src/openai_ros/task_envs/config/: ipa_kifz_viewplanning.yaml  ipa_kifz_viewpoint_sampling.yaml
project_kifz/: CMakeLists.txt  package.xml
training_results/: video_link.txt
training_results/10_DQN_WP9_Squared_3Poses/: events.out.tfevents.1611837641.ChrisTower  ipa_kifz_viewplanning.yaml  ipa_kifz_viewplanning_dqn_params.yaml  training_log.json
training_results/11_DQN_WP9_Random_3Poses/: events.out.tfevents.1611868582.ChrisTower  ipa_kifz_viewplanning.yaml  training_log.json
training_results/12_DQN_WP9_Random_3Poses/: events.out.tfevents.1611860040.ChrisTower  ipa_kifz_viewplanning.yaml  training_log.json
training_results/13_DQN_WP6_Squared_3Poses/: events.out.tfevents.1611847389.ChrisTower  ipa_kifz_viewplanning.yaml  training_log.json
training_results/14_PPO_WP1_Cont_3Poses/: events.out.tfevents.1611882023.ChrisTower  ipa_kifz_viewplanning.yaml  ipa_kifz_viewplanning_ppo_params.yaml
training_results/15_PPO_WP1_Cont_5Poses/: events.out.tfevents.1611338414.ChrisTower  ipa_kifz_viewplanning.yaml  ipa_kifz_viewplanning_ppo_params.yaml
training_results/16_DQN_WP1_Triangular_10Poses/: events.out.tfevents.1614950165.ChrisTower  ipa_kifz_viewplanning.yaml  ipa_kifz_viewplanning_dqn_params.yaml  training_log.json
training_results/17_PPO_WP1_Cont_20Poses/: events.out.tfevents.1614016390.ChrisTower  ipa_kifz_viewplanning.yaml
training_results/18_PPO_WP1_Cont_30Poses/: events.out.tfevents.1614361549.ChrisTower  ipa_kifz_viewplanning.yaml
training_results/1_QLearn_WP9_Square_5Poses/: events.out.tfevents.1611811597.WS1107  ipa_kifz_viewplanning.yaml  model.json  openaigym.episode_batch.0.631179.stats.json  openaigym.manifest.0.631179.manifest.json  training_log.json
training_results/2_QLearn_WP9_Triangular_5Poses/: events.out.tfevents.1611822102.WS1107  ipa_kifz_viewplanning.yaml  openaigym.episode_batch.0.700271.stats.json  training_log.json
training_results/3_QLearn_WP9_Random_5Poses/: events.out.tfevents.1611846772.WS1107  ipa_kifz_viewplanning.yaml  model.json  openaigym.episode_batch.0.859465.stats.json  openaigym.manifest.0.859465.manifest.json  training_log.json
training_results/4_QLearn_WP3_Square_5Poses/: events.out.tfevents.1611854684.WS1107  ipa_kifz_viewplanning.yaml  model.json  openaigym.episode_batch.0.926587.stats.json  openaigym.manifest.0.926587.manifest.json  training_log.json
training_results/5_QLearn_WP3_Triangular_5Poses/: model.json  openaigym.manifest.0.700271.manifest.json
training_results/6_QLearn_WP3_Random_5Poses/: events.out.tfevents.1611935338.ChrisTower  ipa_kifz_viewplanning.yaml  ipa_kifz_viewplanning_qlearn_params.yaml  model.json  openaigym.episode_batch.0.1109957.stats.json  openaigym.manifest.0.1109957.manifest.json  training_log.json
training_results/7_QLearn_WP6_Square_5Poses/: events.out.tfevents.1611873106.WS1107  ipa_kifz_viewplanning.yaml  model.json  openaigym.episode_batch.0.1066410.stats.json  openaigym.manifest.0.1066410.manifest.json  training_log.json
training_results/8_QLearn_WP6_Triangular_5Poses/: events.out.tfevents.1611864663.WS1107  ipa_kifz_viewplanning.yaml  ipa_kifz_viewplanning_qlearn_params.yaml  model.json  openaigym.episode_batch.0.999344.stats.json  openaigym.manifest.0.999344.manifest.json  training_log.json
training_results/9_QLearn_WP6_Random_5Poses/: events.out.tfevents.1611901373.WS1107  ipa_kifz_viewplanning.yaml  model.json  openaigym.episode_batch.0.5160.stats.json  openaigym.manifest.0.5160.manifest.json  (+1 more)
(+25 files in other folders)
