<?xml version="1.0"?>
<package format="2">
  <name>ipa_kifz_gazebo</name>
  <version>0.0.1</version>
  <description>The ipa_kifz_gazebo package</description>

  <author email="christian.landgraf@ipa.fraunhofer.de">Christian Landgraf</author>
  <maintainer email="christian.landgraf@ipa.fraunhofer.de">Christian Landgraf</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>tmp</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
